--- a/index.html
+++ b/index.html
@@ -5,20 +5,36 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 
-	<title>Júlia Vieira</title>
+	<title>Lista de Compras</title>
 	<link rel="icon" type="image/x-icon" href="#">
 
 	<link rel="stylesheet" href="./styles/reset.css">
 	<link rel="stylesheet" href="./styles/style.css">
+
+	<script src="https://kit.fontawesome.com/ade9bc6e8b.js" crossorigin="anonymous"></script>
 </head>
 
-<body id="body">
+<body>
 	<header>
-
 	</header>
 
 	<main>
+		<div class="main__content">
+			<h1 class="main__content--titulo--listas">Lista de Compras</h1>
 
+			<ul class="main__content--itens-lista">
+				<li>Queijo</li>
+				<li>Leite</li>
+				<li>Macarrão</li>
+			</ul>
+
+			<input type="text" placeholder="Adicione produtos por aqui!" id="novoProduto">
+			<button id="botaoAdicionarProduto">
+				<i class="fa-solid fa-circle-plus"></i>
+			</button>
+			
+		</div>
+		
 	</main>
 
 	<footer>
