Funcionalidades HTML: hover e botão de excluir

--- a/index.html
+++ b/index.html
@@ -23,18 +23,23 @@
 			<h1 class="main__content--titulo--listas">Lista de Compras</h1>
 
 			<ul class="main__content--itens-lista">
-				<li>Queijo</li>
-				<li>Leite</li>
-				<li>Macarrão</li>
+				<li><i class="fa-regular fa-circle"></i><i class="fa-solid fa-circle"></i>Queijo</li>
+				<button><i class="fa-solid fa-circle-minus"></i></button>
+				<li><i class="fa-regular fa-circle"></i><i class="fa-solid fa-circle"></i>Leite</li>
+				<button><i class="fa-solid fa-circle-minus"></i></button>
+				<li><i class="fa-regular fa-circle"></i><i class="fa-solid fa-circle"></i>Macarrão</li>
+				<button><i class="fa-solid fa-circle-minus"></i></button>
 			</ul>
 
-			<input type="text" placeholder="Adicione produtos por aqui!" id="novoProduto">
-			<button id="botaoAdicionarProduto">
-				<i class="fa-solid fa-circle-plus"></i>
-			</button>
-			
+			<div class="main__content--barra-inclusao">
+				<input type="text" placeholder="Adicione produtos por aqui!" id="novoProduto">
+				<button id="botaoAdicionarProduto">
+					<i class="fa-solid fa-circle-plus"></i>
+				</button>
+			</div>
+
 		</div>
-		
+
 	</main>
 
 	<footer>
