Criação inicial da funcionalidade javascript para remover itens

--- a/index.html
+++ b/index.html
@@ -23,12 +23,18 @@
 			<h1 class="main__content--titulo--listas">Lista de Compras</h1>
 
 			<ul class="main__content--itens-lista">
-				<li><i class="fa-regular fa-circle"></i><i class="fa-solid fa-circle"></i>Queijo</li>
-				<button><i class="fa-solid fa-circle-minus"></i></button>
-				<li><i class="fa-regular fa-circle"></i><i class="fa-solid fa-circle"></i>Leite</li>
-				<button><i class="fa-solid fa-circle-minus"></i></button>
-				<li><i class="fa-regular fa-circle"></i><i class="fa-solid fa-circle"></i>Macarrão</li>
-				<button><i class="fa-solid fa-circle-minus"></i></button>
+				<div class="main__content--itens-lista--produto">
+					<li><i class="fa-regular fa-circle"></i><i class="fa-solid fa-circle"></i>Queijo</li>
+					<button id="botaoRemoverProduto"><i class="fa-solid fa-circle-minus"></i></button>
+				</div>
+				<div class="main__content--itens-lista--produto">
+					<li><i class="fa-regular fa-circle"></i><i class="fa-solid fa-circle"></i>Leite</li>
+					<button id="botaoRemoverProduto"><i class="fa-solid fa-circle-minus"></i></button>
+				</div>
+				<div class="main__content--itens-lista--produto">
+					<li><i class="fa-regular fa-circle"></i><i class="fa-solid fa-circle"></i>Macarrão</li>
+					<button id="botaoRemoverProduto"><i class="fa-solid fa-circle-minus"></i></button>
+				</div>
 			</ul>
 
 			<div class="main__content--barra-inclusao">
