Inclusão da função de remover itens

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 			<ul class="main__content--itens-lista">
 				<div class="main__content--itens-lista--produto">
 					<li><i class="fa-regular fa-circle"></i><i class="fa-solid fa-circle"></i>Queijo</li>
-					<button id="botaoRemoverProduto"><i class="fa-solid fa-circle-minus"></i></button>
+					<button class="botaoRemoverProduto"><i class="fa-solid fa-circle-minus"></i></button>
 				</div>
 				<div class="main__content--itens-lista--produto">
 					<li><i class="fa-regular fa-circle"></i><i class="fa-solid fa-circle"></i>Leite</li>
-					<button id="botaoRemoverProduto"><i class="fa-solid fa-circle-minus"></i></button>
+					<button class="botaoRemoverProduto"><i class="fa-solid fa-circle-minus"></i></button>
 				</div>
 				<div class="main__content--itens-lista--produto">
 					<li><i class="fa-regular fa-circle"></i><i class="fa-solid fa-circle"></i>Macarrão</li>
-					<button id="botaoRemoverProduto"><i class="fa-solid fa-circle-minus"></i></button>
+					<button class="botaoRemoverProduto"><i class="fa-solid fa-circle-minus"></i></button>
 				</div>
 			</ul>
 
